--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.1.0
   uuid: ^3.0.7
+  google_maps_flutter: ^2.2.6
+  geolocator: ^9.0.2
+
 
 dev_dependencies:
   hive_generator:
